調整好 ui 元件的開發方式

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "del": "^3.0.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.8",
     "gulp-webserver": "^0.9.1",
     "source": "^0.0.3",
@@ -21,5 +20,9 @@
     "typescript": "^2.8.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0"
+  },
+  "dependencies": {
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   }
 }
