--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "browserify": "^16.1.1",
     "del": "^3.0.0",
     "event-stream": "^3.3.4",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
-    "gulp-util": "^3.0.8",
     "gulp-webserver": "^0.9.1",
     "source": "^0.0.3",
     "tsify": "^3.0.4",
     "typescript": "^2.8.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.0"
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "react": "^16.3.0",
