--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "event-stream": "^3.3.4",
     "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
     "source": "^0.0.3",
     "tsify": "^3.0.4",
@@ -21,6 +23,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   }
