--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start":"gulp watch serve"
+    "start": "gulp watch serve"
   },
   "devDependencies": {
     "@types/react": "^16.1.0",
@@ -18,6 +18,7 @@
     "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
     "source": "^0.0.3",
