以 gulp-print 替換無法在 watch 狀態下輸出日誌的 fancy-log 套件

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,18 @@
             "windows": {
                 "program": "${workspaceFolder}\\node_modules\\gulp\\bin\\gulp.js"
             }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Gulp watch 除錯",
+            "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
+            "args":[
+                "watch"
+            ],
+            "windows": {
+                "program": "${workspaceFolder}\\node_modules\\gulp\\bin\\gulp.js"
+            }
         }
     ]
 }
