--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "browserify": "^16.1.1",
     "del": "^3.0.0",
     "event-stream": "^3.3.4",
-    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-print": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
