--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
         "lib":["dom", "es6"],
         "target":"es5",
         "sourceMap":true,
-        "jsx":"react"
+        "jsx":"react",
+        "noImplicitReturns": true,
+        "noEmitOnError":true
     }
 }
