備份暫時不能正常運作的 ClickableDropdown

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,6 @@
         "lib":["dom", "es6"],
         "target":"es5",
         "sourceMap":true,
-        "jsx":"react",
-        "noImplicitReturns": true,
-        "noEmitOnError":true
+        "jsx":"react"
     }
 }
