--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "gulp watch serve"
+    "start": "node ./node_modules/gulp/bin/gulp.js watch serve"
   },
   "devDependencies": {
     "@types/react": "^16.1.0",
