--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node ./node_modules/gulp/bin/gulp.js watch serve"
   },
   "devDependencies": {
-    "@types/react": "^16.1.0",
+    "@types/react": "16.3.0",
     "@types/react-dom": "^16.0.4",
     "browserify": "^16.1.1",
     "del": "^3.0.0",
