--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "@types/debounce": "^1.0.0",
+    "debounce": "^1.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
