--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "start": "node ./node_modules/gulp/bin/gulp.js watch serve"
   },
   "devDependencies": {
-    "@types/react": "16.3.0",
-    "@types/react-dom": "^16.0.4",
     "browserify": "^16.1.1",
     "del": "^3.0.0",
     "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-concat-css": "^3.1.0",
     "gulp-print": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-webserver": "^0.9.1",
     "source": "^0.0.3",
     "tsify": "^3.0.4",
     "typescript": "^2.8.1",
@@ -28,8 +25,11 @@
   },
   "dependencies": {
     "@types/debounce": "^1.0.0",
+    "@types/react": "^16.9.45",
+    "@types/react-dom": "^16.9.8",
     "debounce": "^1.1.0",
     "font-awesome": "^4.7.0",
+    "gulp-connect": "^5.7.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   }
